After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729900 - rtsp-client: wrong marshalling in send-message signal
rtsp-client: wrong marshalling in send-message signal
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.3.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-10 00:24 UTC by Aleix Conchillo Flaqué
Modified: 2014-05-10 11:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
use generic marshalling (995 bytes, patch)
2014-05-10 00:26 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2014-05-10 00:24:27 UTC
The new "send-message" has two arguments and uses g_cclosure_marshal_VOID__POINTER.

When connecting to the signal I'm getting the following backtrace:

  • #1 g_logv
    at gmessages.c line 1033
  • #2 g_log
    at gmessages.c line 1071
  • #3 g_closure_invoke
    at gclosure.c line 768
  • #4 signal_emit_unlocked_R
    at gsignal.c line 3551
  • #5 g_signal_emit_valist
    at gsignal.c line 3307
  • #6 g_signal_emit
    at gsignal.c line 3363
  • #7 send_message
    at rtsp-client.c line 482
  • #8 handle_options_request
    at rtsp-client.c line 2138
  • #9 handle_request
    at rtsp-client.c line 2347
  • #10 gst_rtsp_client_handle_message
    at rtsp-client.c line 2924

Comment 1 Aleix Conchillo Flaqué 2014-05-10 00:26:15 UTC
Created attachment 276268 [details] [review]
use generic marshalling
Comment 2 Tim-Philipp Müller 2014-05-10 11:30:09 UTC
Pushed, thanks:

commit d01beef7c54da0022c952956ff70a81e09093f16
Author: Aleix Conchillo Flaqué <aleix@oblong.com>
Date:   Fri May 9 17:25:07 2014 -0700

    client: fix send-message signal marshaller
    
    Use generic marshalling for the send-message signal. It has
    two POINTER arguments, not just one.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729900